--- a/ProyectoFinal/ProyectoFinalIOS/ProyectoFinalIOS/Info.plist
+++ b/ProyectoFinal/ProyectoFinalIOS/ProyectoFinalIOS/Info.plist
@@ -21,5 +21,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>DRAGON_HUNTER.otf</string>
+		<string>Dragon_FREE.otf</string>
+	</array>
 </dict>
 </plist>
